...
    <item
        android:id="@+id/nav_add"
        android:title="@string/nav_add_book"
        android:icon="@drawable/ic_add_book_24" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings_24" />

</menu>

